Fixed the stream share icons jump effect.

--- a/css/page/stream.less
+++ b/css/page/stream.less
@@ -10,6 +10,7 @@ sections.page .page-content-sections  section.stream {
             }
             &.tw-follow {
                 margin-left: 150px;
+                a { opacity: 0; }
             }
             &.fb-follow-top {
                 margin-left: 355px;
